# mini_ledger_grpc

./: Cargo.toml  README.md  build.rs
proto/: service.proto
src/: lib.rs  main.rs  server.rs
