[package]
name = "mini-ledger-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.7", features = ["serde"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-reflection = "0.12"
base = {git = "https://github.com/leomonteiro92/mini_ledger_rust"}
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }