[package]
name = "mini-ledger-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-reflection = "0.14.1"
base = {git = "https://github.com/leomonteiro92/mini_ledger_rust"}
uuid = { version = "1.18.0", features = ["serde", "v4"] }
tonic-prost = "0.14.1"

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
tonic-prost-build = "0.14.1"
